<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:id="@+id/profileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/temperatureMinLabel"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/temperatureMin"
        android:textSize="20sp"
        android:minLines="2"
        android:layout_gravity="center_vertical"/>

    <org.sz.drillironc.ParameterControl
        android:id="@+id/temperatureMinControl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_columnSpan="6"
        app:minValue="150"
        app:maxValue="450"
        app:dividerValue="1"
        app:step="5"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/temperature"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/temperatureValue"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="1"
        android:textSize="28sp"
        android:text="OFF"
        android:gravity="center"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/temperatureMaxLabel"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/temperatureMax"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"/>

    <org.sz.drillironc.ParameterControl
        android:id="@+id/temperatureMaxControl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_columnSpan="6"
        app:minValue="150"
        app:maxValue="450"
        app:dividerValue="1"
        app:step="5"
        android:layout_gravity="center_vertical"/>

    <Button
        android:id="@+id/bnOff"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="30sp"
        android:text="@string/off"/>

    <Button
        android:id="@+id/bnSet"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="1"
        android:textSize="30sp"
        android:text="@string/set"/>

    <Button
        android:id="@+id/bnM1Set"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="2"
        android:textSize="30sp"
        android:text="@string/m1set"
        android:layout_gravity="end"/>

    <Button
        android:id="@+id/bnM2Set"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="3"
        android:textSize="30sp"
        android:text="@string/m2set"/>

    <Button
        android:id="@+id/bnM3Set"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="4"
        android:textSize="30sp"
        android:text="@string/m3set"/>

    <Button
        android:id="@+id/bnM1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="5"
        android:textSize="30sp"
        android:text="M1 240/260"/>

    <Button
        android:id="@+id/bnM2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="6"
        android:textSize="30sp"
        android:text="M2 240/260"/>

    <Button
        android:id="@+id/bnM3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="7"
        android:textSize="30sp"
        android:text="M3 240/260"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="8"
        android:layout_columnWeight="1"
        android:textSize="20sp"
        android:layout_gravity="bottom"/>

</GridLayout>