<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/drill"
        android:textSize="60sp"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/powerLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/power"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"/>

    <org.sz.drillironc.ParameterControl
        android:id="@+id/powerControl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_column="2"
        app:minValue="10"
        app:maxValue="100"
        app:dividerValue="1"
        app:step="5"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/rtimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/rtime"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"/>

    <org.sz.drillironc.ParameterControl
        android:id="@+id/rtimeControl"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:layout_column="2"
        app:minValue="2"
        app:maxValue="20"
        app:dividerValue="10"
        app:step="2"
        android:layout_gravity="center_vertical"/>

    <Button
        android:id="@+id/bnSet"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_rowWeight="1"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_rowSpan="2"
        android:text="@string/set"/>
</GridLayout>